--- a/AntiGuard/AndroidManifest.xml
+++ b/AntiGuard/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="io.kos.antiguard"
-      android:versionCode="1"
-      android:versionName="&lt;script>alert(1)&lt;/script>">
+      android:versionCode="2"
+      android:versionName="I DRANK WHAT?">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".unlock"
                   android:label="@string/app_name">
